# FPCF_MSVC

./: LICENSE  README.md
src/: CMakeLists.txt
src/fpcf/: CMakeLists.txt
src/fpcf/include/fpcf/: fpcfPrecompiled.h
src/fpcf/include/fpcf/data/: fpcfPointCloudData.h  fpcfPointCloudDataPair.h
src/fpcf/include/fpcf/filter/: fpcfDistanceFilter.h  fpcfFilter.h  fpcfNoiseFilter.h  fpcfPlaneFilter.h  fpcfVoxelDownsampling.h
src/fpcf/include/fpcf/io/: fpcfKinectGrabber.h  fpcfMultipleKinectGrabber.h  fpcfPointCloudReader.h  fpcfPointCloudWriter.h
src/fpcf/include/fpcf/reconstruction/: fpcfSurfaceReconstruction.h
src/fpcf/include/fpcf/registration/: fpcfMultipleRegistration.h  fpcfPairRegistration.h  fpcfPointCloudPreparation.h
src/fpcf/include/fpcf/registration/correspondences/: fpcfCorrespondenceFinder.h  fpcfCorrespondenceRejector.h
src/fpcf/include/fpcf/registration/features/: fpcfNormalEstimation.h  fpcfPersistentFeatures.h
src/fpcf/include/fpcf/registration/features/descriptors/: fpcfDescriptor.h  fpcfFPFHDescriptor.h  fpcfPFHDescriptor.h  fpcfPFHRGBDescriptor.h  fpcfShotColorDescriptor.h  fpcfShotDescriptor.h
src/fpcf/include/fpcf/registration/features/detectors/: fpcfDetector.h  fpcfNarfKeypoint.h  fpcfSiftKeypoint.h
src/fpcf/include/fpcf/registration/graph/: fpcfCloudGraph.h  fpcfGraphOptimization.h
src/fpcf/include/fpcf/registration/transformation/: fpcfICPPairAlignment.h  fpcfLuMGlobalAlignment.h  fpcfPointCloudPairTransformationEstimation.h  fpcfPointCloudTransformation.h
src/fpcf/include/fpcf/segmentation/: fpcfPlaneSegmentation.h
src/fpcf/include/fpcf/tools/: fpcfPointCloudConcatenator.h  fpcfPointCloudDataWrapper.h  fpcfVisualizer.h
src/fpcf/src/: fpcfPrecompiled.cpp
src/fpcf/src/data/: fpcfPointCloudData.cpp  fpcfPointCloudDataPair.cpp
src/fpcf/src/filter/: fpcfDistanceFilter.cpp  fpcfFilter.cpp  fpcfNoiseFilter.cpp  fpcfVoxelDownsampling.cpp
src/fpcf/src/io/: fpcfKinectGrabber.cpp  fpcfMultipleKinectGrabber.cpp  fpcfPointCloudReader.cpp  fpcfPointCloudWriter.cpp
src/fpcf/src/reconstruction/: fpcfSurfaceReconstruction.cpp
src/fpcf/src/registration/: fpcfMultipleRegistration.cpp  fpcfPairRegistration.cpp  fpcfPointCloudPreparation.cpp
src/fpcf/src/registration/correspondences/: fpcfCorrespondenceFinder.cpp  fpcfCorrespondenceRejector.cpp
src/fpcf/src/registration/features/: fpcfNormalEstimation.cpp  fpcfPersistentFeatures.cpp
src/fpcf/src/registration/features/descriptors/: fpcfDescriptor.cpp  fpcfFPFHDescriptor.cpp  fpcfPFHDescriptor.cpp  fpcfPFHRGBDescriptor.cpp  fpcfShotColorDescriptor.cpp  fpcfShotDescriptor.cpp
src/fpcf/src/registration/features/detectors/: fpcfDetector.cpp  fpcfNarfKeypoint.cpp  fpcfSiftKeypoint.cpp
src/fpcf/src/registration/graph/: fpcfCloudGraph.cpp  fpcfGraphOptimization.cpp
src/fpcf/src/registration/transformation/: fpcfICPPairAlignment.cpp  fpcfLuMGlobalAlignment.cpp  fpcfPointCloudPairTransformationEstimation.cpp  fpcfPointCloudTransformation.cpp
src/fpcf/src/segmentation/: fpcfPlaneSegmentation.cpp
src/fpcf/src/tools/: fpcfPointCloudConcatenator.cpp  fpcfPointCloudDataWrapper.cpp  fpcfVisualizer.cpp
src/fpcf_examples/: CMakeLists.txt
src/fpcf_examples/src/: multipleCloudFusion.cpp
src/fpcf_gui/: CMakeLists.txt
src/fpcf_gui/forms/: fpcfHelpWindow.ui  fpcfMainGui.ui
src/fpcf_gui/include/fpcf_gui/: fpcfGuiPrecompiled.h
src/fpcf_gui/include/fpcf_gui/control/fusion/: fpcfFusionManager.h  fpcfGuiMultipleFusion.h  fpcfGuiPointCloudPreparation.h
src/fpcf_gui/include/fpcf_gui/control/guiStates/: fpcfContinuousFusionState.h  fpcfInputState.h  fpcfMeshState.h  fpcfPreparedState.h  fpcfSingleFusionState.h  fpcfState.h  fpcfStateMachine.h
src/fpcf_gui/include/fpcf_gui/data/: fpcfFusionDataGroup.h
src/fpcf_gui/include/fpcf_gui/gui/: fpcfHelpWindow.h  fpcfMainGui.h
src/fpcf_gui/src/: fpcfGuiPrecompiled.cpp  main.cpp
src/fpcf_gui/src/control/fusion/: fpcfFusionManager.cpp  fpcfGuiMultipleFusion.cpp  fpcfGuiPointCloudPreparation.cpp
src/fpcf_gui/src/control/guiStates/: fpcfInputState.cpp  fpcfMeshState.cpp  fpcfPreparedState.cpp  fpcfSingleFusionState.cpp  fpcfState.cpp  fpcfStateMachine.cpp
src/fpcf_gui/src/data/: fpcfFusionDataGroup.cpp
src/fpcf_gui/src/gui/: fpcfHelpWindow.cpp  fpcfMainGui.cpp
